# moot

./: .cvsignore  .gitignore  AUTHORS  Build.PL  ChangeLog  Changes  Constants.xs  DynHMM.xs  HMM.xs  Lexfreqs.xs  MANIFEST  MANIFEST.SKIP  META.json  META.yml  Makefile.PL  Makefile.am  Moot.pm  Moot.xs  MootPerl.c  MootPerl.cc  MootPerl.h  README.html  README.pod  README.txt  TODO  TokenReader.xs  Waste.xs  argh.txt  autogen.sh  autoreconf.sh  configure.ac  configure.in  decodeme.wd  distcheck.sh  dwdst.pc.in  dwdst.spec.in  footer.rpod  gfsm-perl  goodfiles.perl  in.wd  (+20 more)
doc/libdwdst/: .cvsignore  Makefile.am  doxy-filter.cfg.in  doxy-filter.perl  libdwdst.doxy.in  mainpage.dox.in
doc/libmoot/: .cvsignore  Makefile.am  doxy-filter.perl  libmoot.doxy.in  mainpage.dox  mainpage.dox.in
doc/programs/: .cvsignore  Makefile.am  moot.1  moot.html  moot.pod  mootchurn.1  mootchurn.html  mootchurn.pod  mootcompile.1  mootcompile.html  mootcompile.pod  mootconfig.1  mootconfig.html  mootconfig.pod  mootdump.1  mootdump.html  mootdump.pod  mootdyn.1  mootdyn.html  mootdyn.pod  mooteval.1  mooteval.html  mooteval.pod  mootfiles.5  mootfiles.html  mootfiles.pod  mootngsmooth.1  mootngsmooth.html  mootngsmooth.pod  mootpp.1  mootpp.html  mootpp.pod  mootrain.1  mootrain.html  mootrain.pod  moottaste.1  moottaste.html  moottaste.pod  moottype.1  moottype.html  (+8 more)
doc/tutorial/: .cvsignore  Makefile.am  corpus.clx  corpus.mttt  corpus.ttt  moottut.1  moottut.html  moottut.pod  test.mr  test.t  test.tt  test.ttt  test.txt  test.wd
m4/: .cvsignore  Makefile.am  ax_run_sizeof.m4  gnulib-cache.m4  gnulib-comp.m4  onceonly_2_57.m4
src/: .cvsignore  Makefile.am  analyse-parfile.perl  cmdutil.cc  dwdspp.cc  dwdspp.h  dwdspp_cmdparser.ggo  dwdspp_lexer.ll  dwdspp_main.cc  dwdst.cc  dwdst.h  dwdst.sym  dwdst_cmdparser.ggo  dwdst_fstgen.cc  dwdst_fstgen.h  dwdst_fstgen_main.cc  dwdst_lexer.ll  dwdst_main.cc  dwdst_param_lexer.ll  dwdst_param_parser.yy  dwdst_pargen.cc  dwdst_pargen.h  dwdst_pargen_cmdparser.ggo  dwdst_pargen_main.cc  dwdst_trainer.cc  dwdst_trainer.h  dwdstt.cc  dwdstt.h  dwdstt_cmdparser.ggo  dwdstt_main.cc  dwdstvars.sh  mootvars.sh  nopackage.h  postag_lexer.ll
src/libdwdst/: .cvsignore  Makefile.am  bison.cc  bison.h  cleanConfig.h  dwdstAlphabetCompiler.cc  dwdstAlphabetCompiler.h  dwdstAlphabetLexer.ll  dwdstAlphabetParser.yy  dwdstBinIO.h  dwdstBinStream.h  dwdstCHMM.cc  dwdstCHMM.h  dwdstDisambiguator.cc  dwdstDisambiguator.h  dwdstEnum.h  dwdstHMM.cc  dwdstHMM.h  dwdstHMMTrainer.cc  dwdstHMMTrainer.h  dwdstLexfreqs.cc  dwdstLexfreqs.h  dwdstLexfreqsCompiler.cc  dwdstLexfreqsCompiler.h  dwdstLexfreqsLexer.ll  dwdstLexfreqsParser.yy  dwdstMorph.cc  dwdstMorph.h  dwdstNgrams.cc  dwdstNgrams.h  dwdstNgramsCompiler.cc  dwdstNgramsCompiler.h  dwdstNgramsLexer.ll  dwdstNgramsParser.yy  dwdstPPLexer.ll  dwdstParamCompiler.cc  dwdstParamCompiler.h  dwdstParamLexer.ll  dwdstParamParser.yy  dwdstTagger.cc  (+11 more)
src/libdwdst/tests/: .cvsignore  bgttest-PairH.cc  bgttest-RecVH.cc  bgttest.h  chashtest.cc  chashtest.h  chmmcomp.cc  chmmdump.cc  chmmtest.cc  dqtest.cc  dwdst-chmm.cc  dwdst-chmm2.cc  dwdst-hmm.cc  dwdst-hmm2.cc  enumtest.cc  hashadrtest.cc  hmmcomp.cc  hmmdump.cc  hmmtest.cc  iotest.cc  isalpha-test.cc  lfbench.cc  lfchurn.cc  lxptest-SepHV-L.cc  lxptest-SepHV-SL.cc  mstest.cc  ngchurn.cc  pairhash.cc  paratest.cc  rechash.cc  t1.in  t1.lfr  t2.123  tagx.cc  test.sym  test2.lfr  tltest.cc  vittest.cc  vlbench.cc  vsttest-list.cc  (+5 more)
src/libmoot/: .cvsignore  Makefile.am  bganalyze.perl  bison.cc  bison.h  cleanConfig.h  flexskel.cc  flexskel.h  inc2dot.perl  moot.h  mootArgs.h  mootAssocVector.h  mootBinHeader.h  mootBinIO.h  mootBinStream.h  mootBufferIO.h  mootCHMM.cc  mootCHMM.h  mootCIO.h  mootClassfreqs.cc  mootClassfreqs.h  mootClassfreqsCompiler.cc  mootClassfreqsCompiler.h  mootClassfreqsLexer.cc  mootClassfreqsLexer.h  mootClassfreqsLexer.ll  mootClassfreqsParser.cc  mootClassfreqsParser.h  mootClassfreqsParser.yy  mootConfig.h  mootCxxIO.h  mootDynHMM.cc  mootDynHMM.h  mootEnum.h  mootEval.cc  mootEval.h  mootExpatParser.cc  mootExpatParser.h  mootFSM.h  mootFlavor.cc  (+105 more)
src/libmoot/gnulib/: .cvsignore  Makefile.am  asnprintf.c  asprintf.c  config.h  memrchr.c  memrchr.h  printf-args.c  printf-parse.c  vasnprintf.c  vasprintf.c
src/libmoot/tests/: .cvsignore  Makefile  bgttest-RecVM.cc  bgttest-RecVV.cc  bgttest-c2d.cc  biglist.cc  bufchurn.cc  cast.cc  chashtest.cc  chashtest.h  chmmcomp.cc  chmmdump.cc  chmmtest.cc  classtest.cc  clchurn.cc  dotest.h  dqtest.cc  dummyhmm.cc  enumtest.cc  eventlex.cc  flttest.cc  ftest.t  gxxversion.cc  gztest.cc  hmm+exit.cc  hmmcomp.cc  hmmdump.cc  hmmtest.cc  inhtest.cc  iteraddr.cc  itertest.cc  kmwio.cc  lcme.txt  lexlex.cc  lfbench.cc  lfchurn.cc  linetag.cc  linknotes.txt  links.txt  listtest.cc  (+80 more)
src/partest/: .cvsignore  KempeGen.pm  Makefile  avg-analyses.perl  dwdst-in1.re  dwdst-unknown.tags  kempe-alpha2sym.perl  kempe-alpha2vmap.perl  kempe-alphagen.perl  kempe-arcgen.perl  test-in1.re  test-in2.re  test-morph.tfst  test.sym  test.tags  test.tfst  wordboundary.re
src/programs/: .cvsignore  Makefile.am  acknowledge.pod  analyse-parfile.perl  analyse-wtfsa.perl  buggy.sh  cmdutil.cc  cmdutil.h  compare-123s.perl  compare-lexs.perl  computils.cc  computils.h  config.h  debug-kira-segfaults-gcc5-2016-11.txt  debug.txt  dta-waste.rc  dtiger+qq  dtiger+qq.rc  dwdshmm.gog  dwdshmm_main.cc  dwdsm.gog  dwdsm_main.cc  dwdspp.gog  dwdspp_cmdparser.ggo  dwdspp_main.cc  dwdst-fstgen.gog  dwdst-fstgen_main.cc  dwdst-pargen.gog  dwdst-pargen_main.cc  dwdst.gog  dwdst.sym  dwdst_cmdparser.ggo  dwdst_fstgen_cmdparser.ggo  dwdst_fstgen_main.cc  dwdst_main.cc  dwdst_pargen_cmdparser.ggo  dwdst_pargen_main.cc  dwdstrain.gog  dwdstrain_main.cc  dwdstrc  (+76 more)
src/programs/data/: .cvsignore  Makefile  bigrams-add-new.perl  bzip2-dir.sh  classify-eval.perl  (+28 more)
src/symtest/: .cvsignore  Makefile  dummyParser.yy  gttest.cc  ittest.cc  pptest.cc  symtest.cc
src/tests/: .cvsignore  Makefile  parcpy.cc  plextest.cc  test.par  test1.par  trim.cc
(+114 files in other folders)
